@@ -1,3 +1,7 @@
+Updates:
+    esutil/io.py: 
+        Added writing of xml files.
+
 v0.5.1 (2012-04-27)
 ----------------------------------------------------------------------
 
